# study

./: .gitignore  1075.cpp  1247.cpp  1264.cpp  1598.cpp  2083.cpp  2338.cpp  2480.cpp  2530.cpp  2845.cpp  4299.cpp  Transformer.py  helloWorld.cpp
ML/: AlexNet.py  ConvNet.py  MachineLearning.py  alexnet_train_test_log.txt  cvTest.py  googlenet_train_test_log.txt  knn_test.ipynb  nb_test.ipynb  regression_test.ipynb  resnet_train_test_log.txt  test.ipynb  train_test_log.txt  vgg11_train_test_log.txt  vgg_train_test_log.txt
ML/ConvNet/: __init__.py  alexnet.py  googlenet.py  resnet.py  vgg.py
c++/: 1009.cpp  1076.cpp  1100.cpp  1247.cpp  1271.cpp  1284.cpp  1547.cpp  1703.cpp  1837.cpp  2010.cpp  2455.cpp  2742.cpp  2752.cpp
c++/opencv/basic/: main.cpp
c++/opencv/preprocessing/: blur_test.cpp  histogram_test.cpp  sharpening_test.cpp
c++/opencv/test_project/: CMakeLists.txt  main.cpp
cote/: 1004.py  graphBFS.py  logisticRegression.py  longestCommonSubsequence.py  queue.c  slidingWindowFindMax.py  stairClimbing.py  topKFind.py  veuron_1.c  veuron_2.c  veuron_5.c  veuron_5_copy.c  veuron_7.c
cote/aiEngineerTest/: pathogenicity_scores.csv  prob1.py
